# squares

./: .gitignore  Makefile  README.md  pyproject.toml
docs/: conf.py  index.rst  modules.rst  squares.rst
src/squares/: __init__.py  errors.py
tests/: test_squares.py
